# DicomShield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Prueba.dicomshield/: README.md  pyproject.toml
Prueba.dicomshield/dicomshield/: __init__.py  audit.py  cli.py  config.py  deid.py  pseudonym.py
Prueba.dicomshield/profiles/: ct_lung_research.yaml
dicomshield/: __init__.py  audit.py  cli.py  config.py  deid.py  patch.py  pseudonym.py
dicomshield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
profiles/: ct_lung_research.yaml  ielcart_profile.yaml
tests/: test_config.py  test_pseudonym.py
